# rag-store

./: .env.example  .gitignore  PROGRESS_SUMMARY.md  README.md  changelog.md  deploy_classification.sh  deploy_internal.sh  deploy_with_ngrok.sh  nginx.conf  ngrok_manager.sh  pyproject.toml  quick_ngrok.sh  setp-1.md  setup_classification.py  setup_db.py  setup_time_series_schema.py  simple_backend.py  start_external.sh  stop_external.sh  test_ai.py  test_api.py  test_basic.py  test_classification.py  test_classification_quick.py  test_doc.txt  test_external.sh  test_knowledge.txt  test_multi_search.py  test_offline.py  test_rag.py  test_setup.sh  test_time_series.py
.github/instructions/: copilot-instructions.md
.serena/: project.yml
.serena/cache/typescript/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style.md  completion_checklist.md  project_overview.md  suggested_commands.md  tech_stack.md
docs/analysis/: classification-system-test-report.md  family-data-management-requirements.md
docs/guide/: classification-system-guide.md  multi-dimensional-search-guide.md  time-series-tracking-guide.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/classification/: page.tsx
rag_store/: __main__.py  classification_system.py  time_series_analyzer.py
rag_store/app/: main.py
scripts/: classification_schema.sql  embed_upload.py  local_tidb_schema.sql  ocr_extract.py  tidb_cloud_schema.sql  time_series_schema.sql  update_struct.py
(+10 files in other folders)
